--- a/Audit_Search.html
+++ b/Audit_Search.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_purple01 aduit-chart">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_purple01 aduit-chart index-page">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Search</h2>
 		<a href="Audit.html" data-transition="none" class="perLink ui-btn-left myico-arrowL"></a>
@@ -54,131 +54,103 @@
 	            ODM
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table boxSizing">
-                <div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="OdmAll" checked /><label for="OdmAll" class="form_checkbox">All</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Odm-2" checked /><label for="Odm-2" class="form_checkbox">Wistron</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Odm-3" checked /><label for="Odm-3" class="form_checkbox">Compal</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Odm-4" checked /><label for="Odm-4" class="form_checkbox">Quanta</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Odm-5" checked /><label for="Odm-5" class="form_checkbox">Bitland</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Odm-6" checked /><label for="Odm-6" class="form_checkbox">LCFC</label>
-					</span>
-				</div>
+	        <div class="selectConList boxSizing">
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="OdmAll" checked /><label for="OdmAll" class="form_checkbox">All</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Odm-2" checked /><label for="Odm-2" class="form_checkbox">Wistron</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Odm-3" checked /><label for="Odm-3" class="form_checkbox">Compal</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Odm-4" checked /><label for="Odm-4" class="form_checkbox">Quanta</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Odm-5" checked /><label for="Odm-5" class="form_checkbox">Bitland</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Odm-6" checked /><label for="Odm-6" class="form_checkbox">LCFC</label>
+                </span>
 	        </div>
 	        <h2 class="selectConTitle">
 	            AUDITOR
 	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table boxSizing">
-                <div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="AuditorAll" /><label for="AuditorAll" class="form_checkbox">All</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-2" checked /><label for="Auditor-2" class="form_checkbox">韩传亮</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-3" checked /><label for="Auditor-3" class="form_checkbox">吴振华</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-4" checked /><label for="Auditor-4" class="form_checkbox">王凯</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-5" checked /><label for="Auditor-5" class="form_checkbox">马典龙</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-6" checked /><label for="Auditor-6" class="form_checkbox">王万年</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-7" /><label for="Auditor-7" class="form_checkbox">叶进</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-8" /><label for="Auditor-8" class="form_checkbox">崔北亮</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-9" /><label for="Auditor-9" class="form_checkbox">藿香依</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-10" /><label for="Auditor-10" class="form_checkbox">耿正松</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-11" /><label for="Auditor-11" class="form_checkbox">于定辉</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-12" /><label for="Auditor-12" class="form_checkbox">洪夕光</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-13" /><label for="Auditor-13" class="form_checkbox">徐守华</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-14" /><label for="Auditor-14" class="form_checkbox">王红</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-15" /><label for="Auditor-15" class="form_checkbox">付蒙</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Auditor-16" /><label for="Auditor-16" class="form_checkbox">张俊</label>
-					</span>
-				</div>
+	        <div class="selectConList boxSizing">
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="AuditorAll" /><label for="AuditorAll" class="form_checkbox">All</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-2" checked /><label for="Auditor-2" class="form_checkbox">韩传亮</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-3" checked /><label for="Auditor-3" class="form_checkbox">吴振华</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-4" checked /><label for="Auditor-4" class="form_checkbox">王凯</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-5" checked /><label for="Auditor-5" class="form_checkbox">马典龙</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-6" checked /><label for="Auditor-6" class="form_checkbox">王万年</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-7" /><label for="Auditor-7" class="form_checkbox">叶进</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-8" /><label for="Auditor-8" class="form_checkbox">崔北亮</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-9" /><label for="Auditor-9" class="form_checkbox">藿香依</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-10" /><label for="Auditor-10" class="form_checkbox">耿正松</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-11" /><label for="Auditor-11" class="form_checkbox">于定辉</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-12" /><label for="Auditor-12" class="form_checkbox">洪夕光</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-13" /><label for="Auditor-13" class="form_checkbox">徐守华</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-14" /><label for="Auditor-14" class="form_checkbox">王红</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-15" /><label for="Auditor-15" class="form_checkbox">付蒙</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Auditor-16" /><label for="Auditor-16" class="form_checkbox">张俊</label>
+                </span>
 	        </div>
 	        <h2 class="selectConTitle">
 	            CATEGORY
 	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
 	        </h2>
-	        <div class="selectConList selTab-table boxSizing">
-                <div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="CategoryAll" checked /><label for="CategoryAll" class="form_checkbox">All</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Category-2" checked /><label for="Category-2" class="form_checkbox">SOP  Execution</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Category-3" checked /><label for="Category-3" class="form_checkbox">OP  Qualify</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Category-4" checked /><label for="Category-4" class="form_checkbox">Quality  Inspection</label>
-					</span>
-				</div>
-				<div class="selTab-th">
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Category-5" checked /><label for="Category-5" class="form_checkbox">Machine &  Fixture Maintain</label>
-					</span>
-					<span class="form_checkbox_wrap">
-					   <input type="checkbox" id="Category-6" checked /><label for="Category-6" class="form_checkbox">Lesson  Learn</label>
-					</span>
-				</div>
+	        <div class="selectConList boxSizing">
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="CategoryAll" checked /><label for="CategoryAll" class="form_checkbox">All</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Category-2" checked /><label for="Category-2" class="form_checkbox">SOP  Execution</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Category-3" checked /><label for="Category-3" class="form_checkbox">OP  Qualify</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Category-4" checked /><label for="Category-4" class="form_checkbox">Quality  Inspection</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Category-5" checked /><label for="Category-5" class="form_checkbox">Machine &  Fixture Maintain</label>
+                </span>
+                <span class="form_checkbox_wrap">
+                   <input type="checkbox" id="Category-6" checked /><label for="Category-6" class="form_checkbox">Lesson  Learn</label>
+                </span>
 	        </div>
 	    </div>
 	    <div class="seachBtnWrap">
